--- a/Homework/3_Exercise_Representation_1/PH_3_Representation_1.ipynb
+++ b/Homework/3_Exercise_Representation_1/PH_3_Representation_1.ipynb
@@ -49,11 +49,11 @@
         "drive.mount('/content/drive')"
       ],
       "metadata": {
-        "id": "5JLvVTSNryuY",
-        "outputId": "4ef78f1d-ee9a-43cd-b8b5-9e2630514e89",
         "colab": {
           "base_uri": "https://localhost:8080/"
-        }
+        },
+        "id": "5JLvVTSNryuY",
+        "outputId": "4ef78f1d-ee9a-43cd-b8b5-9e2630514e89"
       },
       "id": "5JLvVTSNryuY",
       "execution_count": 2,
@@ -89,12 +89,12 @@
         "data_stemmed.head(1)"
       ],
       "metadata": {
-        "id": "58pevcy7sHcl",
-        "outputId": "8a02f2c5-3e00-4004-bbc0-29155f3fdc10",
         "colab": {
           "base_uri": "https://localhost:8080/",
           "height": 81
-        }
+        },
+        "id": "58pevcy7sHcl",
+        "outputId": "8a02f2c5-3e00-4004-bbc0-29155f3fdc10"
       },
       "id": "58pevcy7sHcl",
       "execution_count": 14,
@@ -259,11 +259,11 @@
         "abs_fre.toarray()"
       ],
       "metadata": {
-        "id": "VkshLrdRu1gE",
-        "outputId": "448bb035-65e5-41f2-8957-d682e964b70f",
         "colab": {
           "base_uri": "https://localhost:8080/"
-        }
+        },
+        "id": "VkshLrdRu1gE",
+        "outputId": "448bb035-65e5-41f2-8957-d682e964b70f"
       },
       "id": "VkshLrdRu1gE",
       "execution_count": 24,
@@ -293,11 +293,11 @@
         "rel_fre.toarray()"
       ],
       "metadata": {
-        "id": "60hOV292vNKT",
-        "outputId": "91eeb7ca-3dc2-43ed-b9bc-3a2126f1c27d",
         "colab": {
           "base_uri": "https://localhost:8080/"
-        }
+        },
+        "id": "60hOV292vNKT",
+        "outputId": "91eeb7ca-3dc2-43ed-b9bc-3a2126f1c27d"
       },
       "id": "60hOV292vNKT",
       "execution_count": 25,
@@ -333,11 +333,11 @@
         "idf_fre.toarray()"
       ],
       "metadata": {
-        "id": "xrZf9Yy-vs4M",
-        "outputId": "7c59b52e-ce10-4ad8-bab6-a9133fd2f8d4",
         "colab": {
           "base_uri": "https://localhost:8080/"
-        }
+        },
+        "id": "xrZf9Yy-vs4M",
+        "outputId": "7c59b52e-ce10-4ad8-bab6-a9133fd2f8d4"
       },
       "id": "xrZf9Yy-vs4M",
       "execution_count": 26,
@@ -384,11 +384,11 @@
         "len(idf_vectorizer.get_feature_names_out())"
       ],
       "metadata": {
-        "id": "DZdiqjDMwD5o",
-        "outputId": "9ac33f0c-3133-4ff9-91d7-3e38ed73753a",
         "colab": {
           "base_uri": "https://localhost:8080/"
-        }
+        },
+        "id": "DZdiqjDMwD5o",
+        "outputId": "9ac33f0c-3133-4ff9-91d7-3e38ed73753a"
       },
       "id": "DZdiqjDMwD5o",
       "execution_count": 29,
@@ -421,25 +421,25 @@
       "source": [
         "binar = Binarizer()\n",
         "abs_bin = binar.fit_transform(abs_fre)\n",
-        "print(abs_fre.toarray().shape)\n",
-        "print(abs_bin.toarray().shape) # no change, since it is already the absolute frequency (1 or 0)"
+        "print(abs_fre.toarray().max())\n",
+        "print(abs_bin.toarray().max()) # OHE version (only relevant if word occurs, but not how many times)"
       ],
       "metadata": {
-        "id": "VBnoJchhwZxI",
-        "outputId": "5402f45e-6e2d-4538-8f9e-9ef3ce73c4e4",
         "colab": {
           "base_uri": "https://localhost:8080/"
-        }
+        },
+        "id": "VBnoJchhwZxI",
+        "outputId": "e2a1ac1a-b9cc-474a-dc73-c96c80545977"
       },
       "id": "VBnoJchhwZxI",
-      "execution_count": 33,
+      "execution_count": 36,
       "outputs": [
         {
           "output_type": "stream",
           "name": "stdout",
           "text": [
-            "(11314, 246)\n",
-            "(11314, 246)\n"
+            "302\n",
+            "1\n"
           ]
         }
       ]
@@ -450,9 +450,9 @@
         ""
       ],
       "metadata": {
-        "id": "r8NWJ9_YwrZ9"
+        "id": "rHdszB-8xXj9"
       },
-      "id": "r8NWJ9_YwrZ9",
+      "id": "rHdszB-8xXj9",
       "execution_count": null,
       "outputs": []
     }
