--- a/Homework/4_Exercise_Representation_2/NL_4_Representation_2.ipynb
+++ b/Homework/4_Exercise_Representation_2/NL_4_Representation_2.ipynb
@@ -5,8 +5,9 @@
     "colab": {
       "name": "NL_4_Representation_2.ipynb",
       "provenance": [],
+      "collapsed_sections": [],
       "mount_file_id": "18aAaW3dX7J55xzs22oRLv2cRi17pC7xd",
-      "authorship_tag": "ABX9TyNRGP2Q+vc6sI32ZCPHDdL9",
+      "authorship_tag": "ABX9TyNK32yMu9UyQH/DoSSbAy/P",
       "include_colab_link": true
     },
     "kernelspec": {
@@ -860,26 +861,24 @@
       "cell_type": "code",
       "source": [
         "#find the closest document with the smallest cosine\n",
-        "np.where(cosine_lists == np.amin(cosine_lists))"
+        "#since we popped out the first entry, the actual index of the most similar document is the result + 1\n",
+        "print(\"The most similar document to the first document is number: \", (np.where(cosine_lists == np.amin(cosine_lists)))[0]+1)\n"
       ],
       "metadata": {
         "colab": {
           "base_uri": "https://localhost:8080/"
         },
         "id": "LLjP5dOp56Zc",
-        "outputId": "822eefbb-186b-4388-aac8-aeeb190c6ae7"
+        "outputId": "3d204876-adda-441f-82a8-e0b2a4799e65"
       },
-      "execution_count": 155,
+      "execution_count": 167,
       "outputs": [
         {
-          "output_type": "execute_result",
-          "data": {
-            "text/plain": [
-              "(array([4975]),)"
-            ]
-          },
-          "metadata": {},
-          "execution_count": 155
+          "output_type": "stream",
+          "name": "stdout",
+          "text": [
+            "The most similar document to the first document is number:  [4976]\n"
+          ]
         }
       ]
     },
