--- a/Homework/5_Class_Homework/PH_5_Homework_Embeddings.ipynb
+++ b/Homework/5_Class_Homework/PH_5_Homework_Embeddings.ipynb
@@ -1231,7 +1231,7 @@
       "metadata": {
         "id": "W4VuPDYSCG1W"
       },
-      "execution_count": 337,
+      "execution_count": null,
       "outputs": []
     },
     {
@@ -1247,7 +1247,7 @@
         },
         "id": "DWfRzhxnCG1W"
       },
-      "execution_count": 338,
+      "execution_count": null,
       "outputs": [
         {
           "output_type": "execute_result",
@@ -1274,7 +1274,7 @@
         },
         "id": "fVe8nfBzCG1X"
       },
-      "execution_count": 339,
+      "execution_count": null,
       "outputs": [
         {
           "output_type": "stream",
@@ -1299,7 +1299,7 @@
         "outputId": "71caf780-357d-4fe9-8f2f-9ce557f8bfa3",
         "id": "kWusatHsCG1X"
       },
-      "execution_count": 340,
+      "execution_count": null,
       "outputs": [
         {
           "output_type": "execute_result",
@@ -1337,7 +1337,7 @@
         "outputId": "93c68939-7aff-4737-cf75-cabb889b9548",
         "id": "cg-c8ix4CG1X"
       },
-      "execution_count": 341,
+      "execution_count": null,
       "outputs": [
         {
           "output_type": "execute_result",
@@ -1366,7 +1366,7 @@
         "outputId": "28d9f766-cba7-4bba-fb95-f0a5719a136f",
         "id": "oJV5WaKGCG1X"
       },
-      "execution_count": 342,
+      "execution_count": null,
       "outputs": [
         {
           "output_type": "stream",
@@ -1395,7 +1395,7 @@
         "outputId": "a08b3516-8784-4761-a2c5-806ae36b047c",
         "id": "vOD9UkuXCG1X"
       },
-      "execution_count": 343,
+      "execution_count": null,
       "outputs": [
         {
           "output_type": "stream",
@@ -1427,7 +1427,7 @@
       "metadata": {
         "id": "7CiZQiASCA8q"
       },
-      "execution_count": 330,
+      "execution_count": null,
       "outputs": []
     },
     {
@@ -1443,7 +1443,7 @@
         },
         "id": "liwQdOEOCA8q"
       },
-      "execution_count": 331,
+      "execution_count": null,
       "outputs": [
         {
           "output_type": "execute_result",
@@ -1470,7 +1470,7 @@
         },
         "id": "XOqFVa0RCA8q"
       },
-      "execution_count": 332,
+      "execution_count": null,
       "outputs": [
         {
           "output_type": "stream",
@@ -1495,7 +1495,7 @@
         "outputId": "62f13776-7f5a-48a7-d866-06ac5bdaaba7",
         "id": "CVb1-nluCA8r"
       },
-      "execution_count": 333,
+      "execution_count": null,
       "outputs": [
         {
           "output_type": "execute_result",
@@ -1522,7 +1522,7 @@
         "outputId": "723f2382-fa79-4c10-b334-d591625da223",
         "id": "jWlRJIhTCA8r"
       },
-      "execution_count": 334,
+      "execution_count": null,
       "outputs": [
         {
           "output_type": "execute_result",
@@ -1570,7 +1570,7 @@
         "outputId": "a2739a8d-8a03-47a8-a73d-4c782f67e38b",
         "id": "-N0TPTGrCA8r"
       },
-      "execution_count": 335,
+      "execution_count": null,
       "outputs": [
         {
           "output_type": "stream",
@@ -1599,7 +1599,7 @@
         "outputId": "c60a7523-3e5e-406b-d941-ae73e3f5438c",
         "id": "GPqlJZ60CA8r"
       },
-      "execution_count": 336,
+      "execution_count": null,
       "outputs": [
         {
           "output_type": "stream",
@@ -1755,7 +1755,7 @@
         "outputId": "7abaa81e-5008-445f-a27a-cfab754481a5",
         "id": "C_WWIXY_7gWO"
       },
-      "execution_count": 328,
+      "execution_count": null,
       "outputs": [
         {
           "output_type": "stream",
@@ -1784,7 +1784,7 @@
         "outputId": "ea9fc2ab-8e67-48df-b42f-dd714a6f52ec",
         "id": "qvu-EFCF7gWO"
       },
-      "execution_count": 329,
+      "execution_count": null,
       "outputs": [
         {
           "output_type": "stream",
@@ -1799,12 +1799,21 @@
       ]
     },
     {
+      "cell_type": "markdown",
+      "source": [
+        "IMO this kind of classification does not work, as we do not weight positive or negative sentiment, but just \"construct\" an averaged vector for negative and positive. "
+      ],
+      "metadata": {
+        "id": "QnchPh92A-wO"
+      }
+    },
+    {
       "cell_type": "code",
       "source": [
         ""
       ],
       "metadata": {
-        "id": "QnchPh92A-wO"
+        "id": "JEhNtpTbLJ7p"
       },
       "execution_count": null,
       "outputs": []
