Finished EDA - RAM problem not solved yet

--- a/Project/Notebooks/PH_EDA.ipynb
+++ b/Project/Notebooks/PH_EDA.ipynb
@@ -18,15 +18,15 @@
         "if colab==True:\n",
         "  \n",
         "  #Mount drive\n",
-        "  #from google.colab import drive\n",
-        "  #drive.mount('/content/drive')\n",
+        "  from google.colab import drive\n",
+        "  drive.mount('/content/drive')\n",
         "\n",
         "  #set path to data in Google Drive\n",
         "  data_path = \"/content/drive/MyDrive/2022_Analytics Lab Student Projects/Data/All Topics\"\n",
         "\n",
         "  #install required packages\n",
-        "  #!pip install duckdb\n",
-        "  #!pip install -U sentence-transformers"
+        "  !pip install duckdb\n",
+        "  !pip install -U sentence-transformers"
       ],
       "metadata": {
         "id": "gnOLlVER1KDP"
@@ -156,11 +156,11 @@
       "cell_type": "code",
       "execution_count": 14,
       "metadata": {
-        "id": "xxSXqNgyz4IV",
-        "outputId": "dfe0caa9-cb38-43ab-a002-ee36ebe320d7",
         "colab": {
           "base_uri": "https://localhost:8080/"
-        }
+        },
+        "id": "xxSXqNgyz4IV",
+        "outputId": "dfe0caa9-cb38-43ab-a002-ee36ebe320d7"
       },
       "outputs": [
         {
@@ -183,11 +183,11 @@
       "cell_type": "code",
       "execution_count": 15,
       "metadata": {
-        "id": "oPo8A1x3z4IW",
-        "outputId": "d1cc1743-35ea-4bbb-992c-07c4c523d829",
         "colab": {
           "base_uri": "https://localhost:8080/"
-        }
+        },
+        "id": "oPo8A1x3z4IW",
+        "outputId": "d1cc1743-35ea-4bbb-992c-07c4c523d829"
       },
       "outputs": [
         {
@@ -211,12 +211,12 @@
       "cell_type": "code",
       "execution_count": 16,
       "metadata": {
-        "id": "_lgPyF7Tz4IX",
-        "outputId": "6d96235d-8af0-45a7-cf19-4921e8bfad4e",
         "colab": {
           "base_uri": "https://localhost:8080/",
           "height": 305
-        }
+        },
+        "id": "_lgPyF7Tz4IX",
+        "outputId": "6d96235d-8af0-45a7-cf19-4921e8bfad4e"
       },
       "outputs": [
         {
@@ -444,11 +444,11 @@
       "cell_type": "code",
       "execution_count": 17,
       "metadata": {
-        "id": "tXHEWk9ez4IY",
-        "outputId": "1ed20d63-7374-4458-eb66-bac4c359a34f",
         "colab": {
           "base_uri": "https://localhost:8080/"
-        }
+        },
+        "id": "tXHEWk9ez4IY",
+        "outputId": "1ed20d63-7374-4458-eb66-bac4c359a34f"
       },
       "outputs": [
         {
@@ -509,11 +509,11 @@
       "cell_type": "code",
       "execution_count": 19,
       "metadata": {
-        "id": "JkKhgMi-z4IZ",
-        "outputId": "b35bdd4d-b657-4ece-d8cf-2c715d76c203",
         "colab": {
           "base_uri": "https://localhost:8080/"
-        }
+        },
+        "id": "JkKhgMi-z4IZ",
+        "outputId": "b35bdd4d-b657-4ece-d8cf-2c715d76c203"
       },
       "outputs": [
         {
@@ -541,11 +541,11 @@
       "cell_type": "code",
       "execution_count": 20,
       "metadata": {
-        "id": "xgCmTvtSz4Ia",
-        "outputId": "5fc208a4-79a9-457c-bb7d-ff50220852c9",
         "colab": {
           "base_uri": "https://localhost:8080/"
-        }
+        },
+        "id": "xgCmTvtSz4Ia",
+        "outputId": "5fc208a4-79a9-457c-bb7d-ff50220852c9"
       },
       "outputs": [
         {
@@ -578,12 +578,12 @@
       "cell_type": "code",
       "execution_count": 21,
       "metadata": {
-        "id": "W3sYi-YXz4Ib",
-        "outputId": "83837f32-3c33-4d46-94a0-26837ed936b9",
         "colab": {
           "base_uri": "https://localhost:8080/",
           "height": 473
-        }
+        },
+        "id": "W3sYi-YXz4Ib",
+        "outputId": "83837f32-3c33-4d46-94a0-26837ed936b9"
       },
       "outputs": [
         {
@@ -887,11 +887,11 @@
       "cell_type": "code",
       "execution_count": 22,
       "metadata": {
-        "id": "i-fdB8aPz4Ic",
-        "outputId": "4a0b21a3-7692-4436-d964-59e26888f52e",
         "colab": {
           "base_uri": "https://localhost:8080/"
-        }
+        },
+        "id": "i-fdB8aPz4Ic",
+        "outputId": "4a0b21a3-7692-4436-d964-59e26888f52e"
       },
       "outputs": [
         {
@@ -973,12 +973,12 @@
       "cell_type": "code",
       "execution_count": 23,
       "metadata": {
-        "id": "EN5_m6k8z4Id",
-        "outputId": "34ae7da2-7d42-4759-c421-70a6d885ea65",
         "colab": {
           "base_uri": "https://localhost:8080/",
           "height": 1000
-        }
+        },
+        "id": "EN5_m6k8z4Id",
+        "outputId": "34ae7da2-7d42-4759-c421-70a6d885ea65"
       },
       "outputs": [
         {
@@ -2276,11 +2276,11 @@
         "ontology_syn.shape"
       ],
       "metadata": {
-        "id": "44THb57i26q3",
-        "outputId": "e25f6c37-a722-4792-9538-cf4746ad919f",
         "colab": {
           "base_uri": "https://localhost:8080/"
-        }
+        },
+        "id": "44THb57i26q3",
+        "outputId": "e25f6c37-a722-4792-9538-cf4746ad919f"
       },
       "execution_count": 24,
       "outputs": [
@@ -2300,12 +2300,12 @@
       "cell_type": "code",
       "execution_count": 25,
       "metadata": {
-        "id": "a7mwD_vLz4Ig",
-        "outputId": "41f9ca27-2eb9-4e5e-ba08-e40bc10c3d1d",
         "colab": {
           "base_uri": "https://localhost:8080/",
           "height": 206
-        }
+        },
+        "id": "a7mwD_vLz4Ig",
+        "outputId": "41f9ca27-2eb9-4e5e-ba08-e40bc10c3d1d"
       },
       "outputs": [
         {
@@ -2484,11 +2484,11 @@
       "cell_type": "code",
       "execution_count": 26,
       "metadata": {
-        "id": "tFD99SCSz4Ij",
-        "outputId": "48822432-e2f7-49d5-f681-9ffad0d01687",
         "colab": {
           "base_uri": "https://localhost:8080/"
-        }
+        },
+        "id": "tFD99SCSz4Ij",
+        "outputId": "48822432-e2f7-49d5-f681-9ffad0d01687"
       },
       "outputs": [
         {
@@ -2536,11 +2536,11 @@
       "cell_type": "code",
       "execution_count": 27,
       "metadata": {
-        "id": "ujvIHYi5z4Ik",
-        "outputId": "c2416d14-825e-459b-b53b-a89875766893",
         "colab": {
           "base_uri": "https://localhost:8080/"
-        }
+        },
+        "id": "ujvIHYi5z4Ik",
+        "outputId": "c2416d14-825e-459b-b53b-a89875766893"
       },
       "outputs": [
         {
@@ -2578,12 +2578,12 @@
       "cell_type": "code",
       "execution_count": 28,
       "metadata": {
-        "id": "31Bzno0Bz4Ik",
-        "outputId": "8826b3eb-a353-45b6-a713-dc8e9d188b81",
         "colab": {
           "base_uri": "https://localhost:8080/",
           "height": 455
-        }
+        },
+        "id": "31Bzno0Bz4Ik",
+        "outputId": "8826b3eb-a353-45b6-a713-dc8e9d188b81"
       },
       "outputs": [
         {
@@ -2784,12 +2784,12 @@
       "cell_type": "code",
       "execution_count": 29,
       "metadata": {
-        "id": "KtvLJBnoz4Il",
-        "outputId": "0ad82966-fc88-4174-c7ba-b1235764206d",
         "colab": {
           "base_uri": "https://localhost:8080/",
           "height": 424
-        }
+        },
+        "id": "KtvLJBnoz4Il",
+        "outputId": "0ad82966-fc88-4174-c7ba-b1235764206d"
       },
       "outputs": [
         {
@@ -3047,11 +3047,11 @@
       "cell_type": "code",
       "execution_count": 31,
       "metadata": {
-        "id": "3tJW2qAJz4Il",
-        "outputId": "60335575-bb51-4673-ebb1-202d9a3ea805",
         "colab": {
           "base_uri": "https://localhost:8080/"
-        }
+        },
+        "id": "3tJW2qAJz4Il",
+        "outputId": "60335575-bb51-4673-ebb1-202d9a3ea805"
       },
       "outputs": [
         {
@@ -3084,12 +3084,12 @@
       "execution_count": 32,
       "metadata": {
         "scrolled": false,
-        "id": "eXua23ofz4Im",
-        "outputId": "c19f86ab-4269-45a7-b127-103f24949a8d",
         "colab": {
           "base_uri": "https://localhost:8080/",
           "height": 652
-        }
+        },
+        "id": "eXua23ofz4Im",
+        "outputId": "c19f86ab-4269-45a7-b127-103f24949a8d"
       },
       "outputs": [
         {
@@ -3336,11 +3336,11 @@
       "cell_type": "code",
       "execution_count": 34,
       "metadata": {
-        "id": "iqPYZZ0dz4In",
-        "outputId": "b00f4fb7-798f-456c-c67e-ff830a82a3e6",
         "colab": {
           "base_uri": "https://localhost:8080/"
-        }
+        },
+        "id": "iqPYZZ0dz4In",
+        "outputId": "b00f4fb7-798f-456c-c67e-ff830a82a3e6"
       },
       "outputs": [
         {
@@ -3363,12 +3363,12 @@
       "cell_type": "code",
       "execution_count": 35,
       "metadata": {
-        "id": "Ffb2feNlz4In",
-        "outputId": "b7dc6767-da91-4a0b-9aae-41774325615e",
         "colab": {
           "base_uri": "https://localhost:8080/",
           "height": 455
-        }
+        },
+        "id": "Ffb2feNlz4In",
+        "outputId": "b7dc6767-da91-4a0b-9aae-41774325615e"
       },
       "outputs": [
         {
@@ -3710,8 +3710,6 @@
       "cell_type": "code",
       "execution_count": 42,
       "metadata": {
-        "id": "yv2fTIXhz4Iq",
-        "outputId": "cf5317ad-f0e7-4259-ccdd-6bc96df0a41a",
         "colab": {
           "base_uri": "https://localhost:8080/",
           "height": 144,
@@ -3728,7 +3726,9 @@
             "ce3fac8045114e18abb941c7a027a472",
             "bc411c90bdfa477ca10e2d852dd6ef9a"
           ]
-        }
+        },
+        "id": "yv2fTIXhz4Iq",
+        "outputId": "cf5317ad-f0e7-4259-ccdd-6bc96df0a41a"
       },
       "outputs": [
         {
@@ -3924,8 +3924,6 @@
       "cell_type": "code",
       "execution_count": 45,
       "metadata": {
-        "id": "x_fZRbWjz4Ir",
-        "outputId": "1556c1b9-520f-475b-a6c8-aa6dcc497381",
         "colab": {
           "base_uri": "https://localhost:8080/",
           "height": 49,
@@ -3942,7 +3940,9 @@
             "145e643516e946799e0306b3d6655d6e",
             "30cd300c96a64e2c9a42d098dbd285d0"
           ]
-        }
+        },
+        "id": "x_fZRbWjz4Ir",
+        "outputId": "1556c1b9-520f-475b-a6c8-aa6dcc497381"
       },
       "outputs": [
         {
@@ -3969,12 +3969,12 @@
       "cell_type": "code",
       "execution_count": 46,
       "metadata": {
-        "id": "yQoS6e9kz4Ir",
-        "outputId": "61c40445-4e04-4bb4-b0fe-6afc05ff4e47",
         "colab": {
           "base_uri": "https://localhost:8080/",
           "height": 424
-        }
+        },
+        "id": "yQoS6e9kz4Ir",
+        "outputId": "61c40445-4e04-4bb4-b0fe-6afc05ff4e47"
       },
       "outputs": [
         {
@@ -4325,12 +4325,12 @@
         "pairs_df.head()"
       ],
       "metadata": {
-        "id": "HyrMNJ0rAMdz",
-        "outputId": "db5d263d-6b99-4f86-a34b-e069870bb4ac",
         "colab": {
           "base_uri": "https://localhost:8080/",
           "height": 206
-        }
+        },
+        "id": "HyrMNJ0rAMdz",
+        "outputId": "db5d263d-6b99-4f86-a34b-e069870bb4ac"
       },
       "execution_count": 127,
       "outputs": [
@@ -4539,12 +4539,12 @@
         "pairs_df[pairs_df.score>0.65].head(10)"
       ],
       "metadata": {
-        "id": "bfkfQIv68sv7",
-        "outputId": "6ed6ad41-9088-4eae-a95e-9d3f3e236c70",
         "colab": {
           "base_uri": "https://localhost:8080/",
           "height": 563
-        }
+        },
+        "id": "bfkfQIv68sv7",
+        "outputId": "6ed6ad41-9088-4eae-a95e-9d3f3e236c70"
       },
       "execution_count": 133,
       "outputs": [
@@ -4812,11 +4812,11 @@
         "print(\"Number of unique entities with synonyms:\", len(entities_syn_unique))"
       ],
       "metadata": {
-        "id": "cfFxDyHEClm4",
-        "outputId": "d44ef957-a154-451a-cb16-9b50fb6e5790",
         "colab": {
           "base_uri": "https://localhost:8080/"
-        }
+        },
+        "id": "cfFxDyHEClm4",
+        "outputId": "d44ef957-a154-451a-cb16-9b50fb6e5790"
       },
       "execution_count": 135,
       "outputs": [
@@ -4848,13 +4848,15 @@
       "metadata": {
         "id": "SJoiJwdUBtIQ"
       },
-      "execution_count": 101,
+      "execution_count": null,
       "outputs": []
     },
     {
       "cell_type": "markdown",
       "source": [
-        "☝ Runnning this code in Colab already took 1:39 minutes"
+        "☝ Runnning this code in Colab already took more than 10 minutes and then crashed because of RAM \n",
+        "- There is also the function `paraphrase_mining`, which improves the brute force comparison, but this only works for one list (sentences or entities or both) --> Need to clarify how to avoid comparison between sentences or comparison between entities?\n",
+        "- Alternatively we could downsample the number of synonyms "
       ],
       "metadata": {
         "id": "Ac651P3gB0oM"
@@ -4863,15 +4865,16 @@
     {
       "cell_type": "code",
       "source": [
-        "pairs_syn_df"
+        "pairs_syn_df.head()\n",
+        "pairs_syn_df.shape"
       ],
       "metadata": {
-        "id": "clM-UagkCTjr",
-        "outputId": "045cd1f2-7ac4-4c9e-8e5a-92e2285a377d",
         "colab": {
           "base_uri": "https://localhost:8080/",
           "height": 659
-        }
+        },
+        "id": "clM-UagkCTjr",
+        "outputId": "045cd1f2-7ac4-4c9e-8e5a-92e2285a377d"
       },
       "execution_count": 102,
       "outputs": [
@@ -5128,15 +5131,14 @@
     {
       "cell_type": "code",
       "source": [
-        "# This should not be the case ? \n",
-        "pairs_syn_df.shape == pairs_df.shape "
+        ""
       ],
       "metadata": {
-        "id": "rSEcvRdfCUhs",
-        "outputId": "b0567c2d-aee6-48ef-ce8e-8cfc06aad95f",
         "colab": {
           "base_uri": "https://localhost:8080/"
-        }
+        },
+        "id": "rSEcvRdfCUhs",
+        "outputId": "b0567c2d-aee6-48ef-ce8e-8cfc06aad95f"
       },
       "execution_count": 107,
       "outputs": [
